--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-slick": "^0.30.2",
+    "react-spring-3d-carousel": "^1.3.4",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/node": "^20",
